--- a/HW2VFinaldeldinal.ipynb
+++ b/HW2VFinaldeldinal.ipynb
@@ -91,7 +91,7 @@
         "import matplotlib.pyplot as plt\n",
         "import json"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -112,33 +112,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49603e92-9bce-4e0a-ec4b-7a7f2affd90d"
+        "outputId": "5fbe5603-6b70-4afd-ece3-7c291386357f"
       },
       "source": [
         "#this are the data used for plotting the map of Paris\n",
         "! wget \"https://github.com/Schimmenti/NumPhysENS/raw/master/arrondissements-millesimes0.csv\""
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-10-19 15:35:24--  https://github.com/Schimmenti/NumPhysENS/raw/master/arrondissements-millesimes0.csv\n",
-            "Resolving github.com (github.com)... 192.30.255.112\n",
-            "Connecting to github.com (github.com)|192.30.255.112|:443... connected.\n",
+            "--2021-10-21 17:31:37--  https://github.com/Schimmenti/NumPhysENS/raw/master/arrondissements-millesimes0.csv\n",
+            "Resolving github.com (github.com)... 140.82.114.3\n",
+            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/arrondissements-millesimes0.csv [following]\n",
-            "--2021-10-19 15:35:25--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/arrondissements-millesimes0.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2021-10-21 17:31:38--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/arrondissements-millesimes0.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 104777 (102K) [text/plain]\n",
             "Saving to: ‘arrondissements-millesimes0.csv’\n",
             "\n",
-            "arrondissements-mil 100%[===================>] 102.32K  --.-KB/s    in 0.01s   \n",
+            "arrondissements-mil 100%[===================>] 102.32K  --.-KB/s    in 0.002s  \n",
             "\n",
-            "2021-10-19 15:35:25 (9.69 MB/s) - ‘arrondissements-millesimes0.csv’ saved [104777/104777]\n",
+            "2021-10-21 17:31:38 (51.8 MB/s) - ‘arrondissements-millesimes0.csv’ saved [104777/104777]\n",
             "\n"
           ]
         }
@@ -164,7 +164,7 @@
         "# by using plt.plot(coords[0][:,0],coords[0][:,1]) you can plot the whole arrondissement.\n",
         "# the important variables here are 'coords' and 'arr_names' i.e. the coordinates and the name of the arrondissement."
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c673d8a-5715-4ca5-c770-74d5c54639d7"
+        "outputId": "d39b96b8-026a-44b5-aa3b-d2ec0d3af5a5"
       },
       "source": [
         "#this is the data used for plotting the map of Paris\n",
@@ -204,49 +204,49 @@
         "! wget \"https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_combined.csv\"\n",
         "! wget \"https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_walk.csv\""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-10-19 15:35:33--  https://github.com/Schimmenti/NumPhysENS/raw/master/network_nodes.csv\n",
-            "Resolving github.com (github.com)... 192.30.255.113\n",
-            "Connecting to github.com (github.com)|192.30.255.113|:443... connected.\n",
+            "--2021-10-21 17:31:44--  https://github.com/Schimmenti/NumPhysENS/raw/master/network_nodes.csv\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_nodes.csv [following]\n",
-            "--2021-10-19 15:35:33--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_nodes.csv\n",
+            "--2021-10-21 17:31:44--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_nodes.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 707846 (691K) [text/plain]\n",
             "Saving to: ‘network_nodes.csv’\n",
             "\n",
-            "network_nodes.csv   100%[===================>] 691.26K  --.-KB/s    in 0.02s   \n",
+            "\rnetwork_nodes.csv     0%[                    ]       0  --.-KB/s               \rnetwork_nodes.csv   100%[===================>] 691.26K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2021-10-19 15:35:33 (27.2 MB/s) - ‘network_nodes.csv’ saved [707846/707846]\n",
+            "2021-10-21 17:31:44 (68.9 MB/s) - ‘network_nodes.csv’ saved [707846/707846]\n",
             "\n",
-            "--2021-10-19 15:35:33--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_combined.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2021-10-21 17:31:44--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_combined.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 649891 (635K) [text/plain]\n",
             "Saving to: ‘network_combined.csv’\n",
             "\n",
-            "network_combined.cs 100%[===================>] 634.66K  --.-KB/s    in 0.03s   \n",
+            "network_combined.cs 100%[===================>] 634.66K  --.-KB/s    in 0.007s  \n",
             "\n",
-            "2021-10-19 15:35:34 (21.3 MB/s) - ‘network_combined.csv’ saved [649891/649891]\n",
+            "2021-10-21 17:31:44 (94.2 MB/s) - ‘network_combined.csv’ saved [649891/649891]\n",
             "\n",
-            "--2021-10-19 15:35:34--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_walk.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2021-10-21 17:31:44--  https://raw.githubusercontent.com/Schimmenti/NumPhysENS/master/network_walk.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 4704878 (4.5M) [text/plain]\n",
             "Saving to: ‘network_walk.csv’\n",
             "\n",
-            "network_walk.csv    100%[===================>]   4.49M  --.-KB/s    in 0.05s   \n",
+            "network_walk.csv    100%[===================>]   4.49M  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2021-10-19 15:35:34 (91.8 MB/s) - ‘network_walk.csv’ saved [4704878/4704878]\n",
+            "2021-10-21 17:31:44 (157 MB/s) - ‘network_walk.csv’ saved [4704878/4704878]\n",
             "\n"
           ]
         }
@@ -290,7 +290,7 @@
         "    for _,line in g.iterrows():\n",
         "      durations[id][line.to_stop_I] = line.duration"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -337,7 +337,7 @@
         "  \n",
         "  return dur_src, previous_node"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -348,7 +348,7 @@
       "source": [
         "A=dijkstra(net, durations, 42)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -405,20 +405,25 @@
       "metadata": {
         "id": "pgrONt8rmPKQ",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 166
         },
-        "outputId": "3a29baea-d6d9-45ab-fe0b-5db41a8d44fc"
+        "outputId": "69241eda-af23-4177-e361-ee6ad92e7e48"
       },
       "source": [
         "print(\"The minimal duration of the trip to reach the party is \", int(A[0][146]),\"sec\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The minimal duration of the trip to reach the party is  1102 sec\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-5c7727c021d8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The minimal duration of the trip to reach the party is \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m146\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"sec\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'A' is not defined"
           ]
         }
       ]
@@ -761,7 +766,11 @@
         "be the sum over all states possible with energy E for whom a change of one spin can lead to a configuration whith an energy E=deltaE. \\\n",
         "In a Markov chain point of view, as Pfli>0 we have that each transition rate is strictly positif. With the Perron Frohbenius theorem we have \\\n",
         "that there should exists only one stationnary state for the system. Now that we have the unicity, if we show that a Blotzmann distribution coupled to a \\\n",
-        "detailed balance is working for this Pflip probability, we coud conclude that the sampling of the configuration follow a Boltzmann confiuration  \"\n",
+        "detailed balance is working for this Pflip probability, we coud conclude that the sampling of the configuration follow a Boltzmann confiuration  \\\n",
+        "Indeed one can easily show that with P(E)=exp(-BE)/Zo the detailed balance will be verified. If we have E=Eext+h, assuming that the state i has a spin +1, the change of energy will be 2*B*J*h\\\n",
+        "We have P(E)*Pflip(a->b)=P(E-2BJh)*Pflip(b->a) with a the state for which the spin is +1. We have Pflip(a->b)=1/1+exp(2BJh) and Pflip(b->a)=1/1+exp(-2BJh).\\\n",
+        "The detailed balance is then verified by this distrubition, that when normalized will be a solution for a stationnary state. With the unicity o such a solution we \\\n",
+        "can conclude that the sampling of configurations follows the Boltzmann distribution\"\n",
         "\n",
         "print(c)"
       ],
@@ -830,7 +839,7 @@
         "import itertools as it\n",
         "import matplotlib.pylab as plt"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -978,7 +987,7 @@
         "ax[1,1].set_xlabel(\"T\")\n",
         "ax[1,1].set_ylabel(\"$C_V$\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1029,7 +1038,7 @@
       "source": [
         ""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1141,7 +1150,7 @@
         "print(\"For T=Tc it seems to exist two correlation length, one close to 1 and the other one close to the system size, however we observe some more dispersion on the size of clusters : the system is in a particular critical state\")\n",
         "print(\"For T>Tc the system is in a disordered phase, there is almsot no correlation between a spin and its neighboor, that's why the size of the cluster is nearly 1, that's to say there is often only one spin in the cluster\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1302,7 +1311,7 @@
         "print(\"However, for T>Tc the correlation function converges to 0, that's to say that after a certain distance, spins are almost not correlated anymore, this is the case for a disordered phase. This result is coherent with the fact that for T>TC spins are more or less randomly distributed\")\n",
         "print(\"For T<Tc, the coreelation function converges to a non 0 value, we are obviously in an ordered phase for which imortant clusters exists, spins stay correlated even for large distance between them.\")"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1342,7 +1351,7 @@
         "plt.plot(np.arange(1,18),Coor_T[0][1:18],'x')\n",
         "#plt.plot(np.arange(1,18),fit_function(np.arange(1,18), a, b, c, d))"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1468,10 +1477,11 @@
         "  dL.append(d)\n",
         "  titl=\"Correlation function and its fit for T =\" + str(int(TList[k]*100)/100)\n",
         "  ax[k].set_title(titl)\n",
+        "  ax[k].x_label(Temperature)\n",
         "\n",
         "\n"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1513,10 +1523,11 @@
         "#plt.title(\"S, cluster size congtue à la magnetisation moyenne\")\n",
         "\n",
         "\n",
-        "plt.plot(dL,'x')\n",
-        "plt.title(\"eta, the coefficiant onsager that is euqal to 0.25 in T>TC\")\n"
+        "plt.plot(TList,dL,'x')\n",
+        "plt.title(\"eta, the coefficiant onsager that is euqal to 0.25 in T>TC\")\n",
+        "plt.axvline(x=Tc,color='gray',linestyle='--')"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
